# serializer version: 1
# name: TestOscillatorComplicated.test_reset
  3.8697802427798167
# ---
# name: TestOscillatorComplicated.test_reset.1
  2.1943921987602617
# ---
# name: TestOscillatorComplicated.test_reset.10
  dict({
    'reference': 8.0,
    'reference_error': -7.529113260561752,
    'state_of_interest': 0.47088673943824766,
  })
# ---
# name: TestOscillatorComplicated.test_reset.2
  4.292989599556912
# ---
# name: TestOscillatorComplicated.test_reset.3
  3.4868401452968194
# ---
# name: TestOscillatorComplicated.test_reset.4
  0.47088673943824766
# ---
# name: TestOscillatorComplicated.test_reset.5
  4.878111758183779
# ---
# name: TestOscillatorComplicated.test_reset.6
  3.805698509951765
# ---
# name: TestOscillatorComplicated.test_reset.7
  3.930321526384769
# ---
# name: TestOscillatorComplicated.test_reset.8
  8.0
# ---
# name: TestOscillatorComplicated.test_reset.9
  -7.529113260561752
# ---
# name: TestOscillatorComplicated.test_step
  7.2176752984647585
# ---
# name: TestOscillatorComplicated.test_step.1
  5.347295341595352
# ---
# name: TestOscillatorComplicated.test_step.10
  51.2380654736653
# ---
# name: TestOscillatorComplicated.test_step.11
  False
# ---
# name: TestOscillatorComplicated.test_step.12
  False
# ---
# name: TestOscillatorComplicated.test_step.13
  dict({
    'reference': 8.219875313546899,
    'reference_error': -7.158076939630176,
    'state_of_interest': 1.0617983739167234,
  })
# ---
# name: TestOscillatorComplicated.test_step.14
  6.617578788378586
# ---
# name: TestOscillatorComplicated.test_step.15
  10.121926019292687
# ---
# name: TestOscillatorComplicated.test_step.16
  10.558213919296016
# ---
# name: TestOscillatorComplicated.test_step.17
  9.489788766919386
# ---
# name: TestOscillatorComplicated.test_step.18
  2.1529185192360814
# ---
# name: TestOscillatorComplicated.test_step.19
  5.495903390879987
# ---
# name: TestOscillatorComplicated.test_step.2
  7.963627466536033
# ---
# name: TestOscillatorComplicated.test_step.20
  5.282561233812505
# ---
# name: TestOscillatorComplicated.test_step.21
  5.040312496423352
# ---
# name: TestOscillatorComplicated.test_step.22
  8.439533636705194
# ---
# name: TestOscillatorComplicated.test_step.23
  -6.286615117469113
# ---
# name: TestOscillatorComplicated.test_step.24
  39.521529635191186
# ---
# name: TestOscillatorComplicated.test_step.25
  False
# ---
# name: TestOscillatorComplicated.test_step.26
  False
# ---
# name: TestOscillatorComplicated.test_step.27
  dict({
    'reference': 8.439533636705194,
    'reference_error': -6.286615117469113,
    'state_of_interest': 2.1529185192360814,
  })
# ---
# name: TestOscillatorComplicated.test_step.28
  6.259929503542526
# ---
# name: TestOscillatorComplicated.test_step.29
  11.038284278415837
# ---
# name: TestOscillatorComplicated.test_step.3
  6.5191227366070565
# ---
# name: TestOscillatorComplicated.test_step.30
  10.774163723142468
# ---
# name: TestOscillatorComplicated.test_step.31
  12.660600385628312
# ---
# name: TestOscillatorComplicated.test_step.32
  3.08255601422249
# ---
# name: TestOscillatorComplicated.test_step.33
  6.785657350514018
# ---
# name: TestOscillatorComplicated.test_step.34
  6.6549217868711175
# ---
# name: TestOscillatorComplicated.test_step.35
  6.256259949345052
# ---
# name: TestOscillatorComplicated.test_step.36
  8.6587581932296
# ---
# name: TestOscillatorComplicated.test_step.37
  -5.57620217900711
# ---
# name: TestOscillatorComplicated.test_step.38
  31.09403074116364
# ---
# name: TestOscillatorComplicated.test_step.39
  False
# ---
# name: TestOscillatorComplicated.test_step.4
  1.0617983739167234
# ---
# name: TestOscillatorComplicated.test_step.40
  False
# ---
# name: TestOscillatorComplicated.test_step.41
  dict({
    'reference': 8.6587581932296,
    'reference_error': -5.57620217900711,
    'state_of_interest': 3.08255601422249,
  })
# ---
# name: TestOscillatorComplicated.test_step.42
  8.517526088622663
# ---
# name: TestOscillatorComplicated.test_step.43
  13.538316594245781
# ---
# name: TestOscillatorComplicated.test_step.44
  11.301378406696704
# ---
# name: TestOscillatorComplicated.test_step.45
  11.806427392435813
# ---
# name: TestOscillatorComplicated.test_step.46
  3.899191373935945
# ---
# name: TestOscillatorComplicated.test_step.47
  8.14464339402971
# ---
# name: TestOscillatorComplicated.test_step.48
  7.979492675361645
# ---
# name: TestOscillatorComplicated.test_step.49
  7.906580414084879
# ---
# name: TestOscillatorComplicated.test_step.5
  4.9365278044943945
# ---
# name: TestOscillatorComplicated.test_step.50
  8.877332634950129
# ---
# name: TestOscillatorComplicated.test_step.51
  -4.9781412610141835
# ---
# name: TestOscillatorComplicated.test_step.52
  24.781890414611887
# ---
# name: TestOscillatorComplicated.test_step.53
  False
# ---
# name: TestOscillatorComplicated.test_step.54
  False
# ---
# name: TestOscillatorComplicated.test_step.55
  dict({
    'reference': 8.877332634950129,
    'reference_error': -4.9781412610141835,
    'state_of_interest': 3.899191373935945,
  })
# ---
# name: TestOscillatorComplicated.test_step.56
  9.952837140438259
# ---
# name: TestOscillatorComplicated.test_step.57
  11.790015139798705
# ---
# name: TestOscillatorComplicated.test_step.58
  13.655075433433277
# ---
# name: TestOscillatorComplicated.test_step.59
  13.100461116818366
# ---
# name: TestOscillatorComplicated.test_step.6
  4.264234935283765
# ---
# name: TestOscillatorComplicated.test_step.60
  5.028044065679414
# ---
# name: TestOscillatorComplicated.test_step.61
  9.822095445467253
# ---
# name: TestOscillatorComplicated.test_step.62
  9.308943659911419
# ---
# name: TestOscillatorComplicated.test_step.63
  9.321213972029517
# ---
# name: TestOscillatorComplicated.test_step.64
  9.095041255281616
# ---
# name: TestOscillatorComplicated.test_step.65
  -4.066997189602202
# ---
# name: TestOscillatorComplicated.test_step.66
  16.540466140232212
# ---
# name: TestOscillatorComplicated.test_step.67
  False
# ---
# name: TestOscillatorComplicated.test_step.68
  False
# ---
# name: TestOscillatorComplicated.test_step.69
  dict({
    'reference': 9.095041255281616,
    'reference_error': -4.066997189602202,
    'state_of_interest': 5.028044065679414,
  })
# ---
# name: TestOscillatorComplicated.test_step.7
  4.252396658049173
# ---
# name: TestOscillatorComplicated.test_step.8
  8.219875313546899
# ---
# name: TestOscillatorComplicated.test_step.9
  -7.158076939630176
# ---
